--- a/README.html
+++ b/README.html
@@ -191,16 +191,14 @@ The <b>ls</b> command lists the contents of a directory, directories have slashe
 </p>
 <p class="code">
 > <b>ls</b> (fd0)/<br />
-1970-01-01 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;./<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;../<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ldlinux.sys<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;linux.cfg<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kexec-loader.conf<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;syslinux.cfg<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;README.html<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;modules/<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;initrd.img<br />
-2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;vmlinuz
+ldlinux.sys<br />
+linux.cfg<br />
+kexec-loader.conf<br />
+syslinux.cfg<br />
+README.html<br />
+modules/<br />
+initrd.img<br />
+vmlinuz
 </p>
 
 <p>
