--- a/README.html
+++ b/README.html
@@ -157,6 +157,9 @@ grub-map hd0,2 LABEL=root
 If you are running a modular kernel (All official builds use a modular kernel) you can load modules to support hardware, filesystems and encodings not supported by the base kernel. To install a module copy it to the modules directory on the boot disk, if the module is required to access the boot disk you can create a directory called modules in the initramfs and copy it there. One or more modules may be packaged in a tar file, or an LZMA compressed tar file with the .tlz extension.
 </p>
 <p>
+If you need to add modules to the initramfs, there is a bash script available which will decompress, extract and copy the modules to the initramfs. Modules are decompressed and extracted before being added to the initramfs to maximise the compression of the initramfs file. The script is named addmod.sh and is available in the kexec-loader source archive, it can also be downloaded here: <a href="http://www.solemnwarning.net/kexec-loader/downloads/addmod.sh">addmod.sh</a>.
+</p>
+<p>
 Some modules or hardware combinations may require arguments to be passed to the module, this is usually for ISA and non-PnP hardware. If you have such hardware you can specify arguments to be passed in kexec-loader.conf, these will only be used for modules loaded after kexec-loader.conf.
 </p>
 <p class="code">
