Removed build section from readme

--- a/README.html
+++ b/README.html
@@ -47,7 +47,7 @@ a:hover {
 		<li><a href="#s2s2">2.2. GRUB Integration</a></li>
 		<li><a href="#s2s3">2.3. Kernel Modules</a></li>
 		<li><a href="#s2s4">2.4. Changing the keymap</a></li>
-		<li><a href="#s2s5">2.5. Shell</a>
+		<li><a href="#s2s5">2.5. Shell</a></li>
 	</ul>
 	</li>
 	<li><a href="#s3">3. Reference</a>
@@ -56,16 +56,10 @@ a:hover {
 		<li><a href="#s3s2">3.2. Shell Reference</a></li>
 	</ul>
 	</li>
-	<li><a href="#s4">4. Building kexec-loader</a>
+	<li><a href="#s4">4. Support</a>
 	<ul>
-		<li><a href="#s4s1">4.1. Introduction</a></li>
-		<li><a href="#s4s2">4.2. Compiling</a></li>
-	</ul>
-	</li>
-	<li><a href="#s5">5. Support</a>
-	<ul>
-		<li><a href="#s5s1">5.1. Website</a></li>
-		<li><a href="#s5s2">5.2. Developer</a></li>
+		<li><a href="#s4s1">4.1. Website</a></li>
+		<li><a href="#s4s2">4.2. Developer</a></li>
 	</ul>
 	</li>
 </ul>
@@ -341,50 +335,19 @@ The kexec-loader shell is designed to closely mimic a traditional UNIX shell, ex
 	</li>
 </ul>
 
-<h2><a name="s3s3">3.3. Keymap Files</a></h2>
+<h3><a name="s3s3">3.3. Keymap Files</a></h3>
 <p>
 Keymap files are loaded from the boot floppy, they must be stored in the root directory and named keymap.txt. The file format is a plain text file in UNIX or DOS format with one record per line. The record values are table, key index and action, seperated by tabs. For more information read the keymap.c file.
 </p>
 
-<h2><a name="s4">4. Building kexec-loader</a></h2>
-<h3><a name="s4s1">4.1. Introduction</a></h3>
-<p>
-This section explains how to build a kexec-loader disk image, you must build a kernel and toolchain which is not explained in this document. I recommend using uClibc as a toolchain as glibc is too big to fit on a floppy, you must also use Linux 2.6.13 or above, as earlier versions did not have the kexec syscalls.
-</p>
-<p>
-You will need the following to compile kexec-loader:
-</p>
-<ul>
-	<li>GCC Toolchain</li>
-	<li>Linux kernel headers</li>
-	<li>GNU Make</li>
-	<li>zlib with headers</li>
-	<li>cpio archiver (For making initramfs)</li>
-</ul>
-
-<h3><a name="s4s2">4.2. Compiling</a></h3>
-<p>
-To compile kexec-loader, use the following commands:
-</p>
-<p style="font-family: monospace;">
-HOST=i386-linux-uclibc make<br />
-./mkinitramfs.sh initramfs.cpio
-</p>
-<p>
-The first command assumes your toolchain was built to target i386-linux-uclibc, in which case the various tools such as gcc can be invoked as i386-linux-uclibc-gcc, ensure you set this to the correct target, or the compile may fail, or end up being compiled with the wrong toolchain. You must also make sure that the toolchain bin directories are included in $PATH.
-</p>
-<p>
-The first command compiles kexec-loader, downloads, patches and compiles kexec-tools and e2fsprogs, then links them as the binaries src/kexec-loader and src/kexec-loader.static, which are dynamically and statically linked respectively. The second command creates a Linux initramfs archive as initramfs.cpio, the initramfs contains kexec-loader.static as /init, some device nodes and empty directories.
-</p>
-
-<h2><a name="s5">5. Support</a></h2>
-<h3><a name="s5s1">5.1. Website</a></h3>
+<h2><a name="s4">4. Support</a></h2>
+<h3><a name="s4s1">4.1. Website</a></h3>
 <p>
 For information on kexec-loader, including current development and latest
 releases, please see the project <a href="http://www.solemnwarning.net/kexec-loader/">website</a>.
 </p>
 
-<h3><a name="s5s2">5.2. Developer</a></h3>
+<h3><a name="s4s2">4.2. Developer</a></h3>
 <p>
 The developer of kexec-loader, Daniel Collins (aka solemnwarning), can often be
 found on the Freenode IRC network. To contact solemnwarning, you can use the
