Updated ISO package readme

--- a/cdrom-readme.html
+++ b/cdrom-readme.html
@@ -60,5 +60,8 @@ To build an ISO simply edit the kexec-loader.conf file in iso-files, copy any ex
 <div class="code">
 ./mkiso.sh kexec-loader.iso
 </div>
+<p>
+Note: You will need to add modules for accessing the CD to the iso-modules directory, such as iso9660 and IDE, SATA or whatever else is applicable.
+</p>
 </body>
 </html>
